--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Create bookmarklets in your browser with a simple copy and paste.",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "mocha"
   },
   "repository": {
     "type": "git",
@@ -18,5 +18,8 @@
   "homepage": "https://seguri.github.io/bookmarkleter/",
   "dependencies": {
     "uglify-js": "^3.15.4"
+  },
+  "devDependencies": {
+    "mocha": "^9.2.2"
   }
 }
