--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Create bookmarklets in your browser with a simple copy and paste.",
   "main": "index.js",
   "scripts": {
+    "lint": "prettier --write '**/*.{js,css,html}'",
     "test": "mocha"
   },
   "repository": {
@@ -20,6 +21,7 @@
     "uglify-js": "^3.15.4"
   },
   "devDependencies": {
-    "mocha": "^9.2.2"
+    "mocha": "^9.2.2",
+    "prettier": "2.6.2"
   }
 }
