--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "scripts": {
     "prebuild": "test -f uglify.js || uglifyjs --self --wrap exports -c -m -o uglify.js",
+    "build": "browserify index.js | uglifyjs > bundle.min.js",
     "lint": "prettier --write '**/*.{js,css,html}'",
     "test": "mocha"
   },
@@ -22,6 +23,7 @@
     "uglify-js": "^3.15.4"
   },
   "devDependencies": {
+    "browserify": "^17.0.0",
     "mocha": "^9.2.2",
     "prettier": "2.6.2"
   }
