--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "prebuild": "test -f uglify.js || uglifyjs --self --wrap exports -c -m -o uglify.js",
-    "build": "browserify index.js | uglifyjs > bundle.min.js",
+    "build": "browserify index.js | uglifyjs -o bundle.min.js",
     "lint": "prettier --write '**/*.{js,css,html}'",
     "test": "mocha"
   },
